Added:
	Compile and Run (car)
	Load project from CLI ($ clide -p <project>)
	Langauges pull compiler/interpreter from clide.conf

Concept:
	Managing different project types

Bug Fixes:
	"install" on projects and non-projects (issue: projects would not be installed in .bash_aliases)
	"AddAlias.sh" was not finding "errorCode.sh"
	performance improvements (CLI User Interface only changes after TRUE changes)
