@@ -3,7 +3,7 @@
 #1st # = Overflow
 #2nd # = Additional features
 #3rd # = Bug/code tweaks/fixes
-Version=0.78.39
+Version=0.78.40
 
 #cl[ide] config
 #{
